--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
+    "fs-extra": "^10.1.0",
     "helmet": "^5.1.1",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
